// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Post Should render post with image 1`] = `
<View
  accessible={true}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "backgroundColor": "#ffff",
      "borderRadius": 5,
      "elevation": 3,
      "marginBottom": 0,
      "marginLeft": 10,
      "marginRight": 10,
      "marginTop": 10,
      "opacity": 1,
      "overflow": "hidden",
      "shadowColor": "#000",
      "shadowOpacity": 0.26,
    }
  }
>
  <View
    style={
      Array [
        Object {
          "display": "flex",
          "flexDirection": "row",
          "marginBottom": 15,
          "marginLeft": 15,
          "marginRight": 15,
          "marginTop": 15,
        },
      ]
    }
  >
    <Image
      source={
        Object {
          "uri": "https://cdn.pixabay.com/photo/2017/07/19/09/51/hallstatt-2518544_960_720.jpg",
        }
      }
      style={
        Object {
          "flex": 1,
          "height": 120,
          "marginRight": 10,
          "resizeMode": "stretch",
          "width": "100%",
        }
      }
    />
    <View
      style={
        Array [
          Object {
            "flexBasis": 0,
            "flexDirection": "column",
            "flexGrow": 2,
            "flexShrink": 1,
          },
        ]
      }
    >
      <Text
        style={
          Array [
            Object {
              "flexBasis": 0,
              "flexGrow": 2,
              "flexShrink": 1,
              "fontSize": 20,
              "fontWeight": "700",
            },
          ]
        }
      >
        Sample title for post
      </Text>
      <Text
        style={
          Array [
            Object {
              "flexBasis": 0,
              "flexGrow": 1,
              "flexShrink": 1,
              "fontSize": 15,
              "fontWeight": "600",
            },
          ]
        }
      >
        sample description for post
      </Text>
      <View
        style={
          Array [
            Object {
              "alignItems": "flex-end",
              "flexBasis": 0,
              "flexDirection": "row",
              "flexGrow": 1,
              "flexShrink": 1,
            },
          ]
        }
      >
        <Text
          style={
            Array [
              Object {
                "color": "rgba(191, 191, 191, 1)",
                "fontSize": 12,
                "fontWeight": "600",
                "marginRight": 5,
              },
            ]
          }
        >
          2021-06-12 03:47:52
        </Text>
        <Text
          style={
            Array [
              Object {
                "color": "rgba(191, 191, 191, 1)",
                "fontSize": 12,
                "fontWeight": "600",
                "marginRight": 5,
              },
            ]
          }
        >
          Replies: 
          0
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`Post Should render post with multiple comments 1`] = `
<View
  accessible={true}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "backgroundColor": "#ffff",
      "borderRadius": 5,
      "elevation": 3,
      "marginBottom": 0,
      "marginLeft": 10,
      "marginRight": 10,
      "marginTop": 10,
      "opacity": 1,
      "overflow": "hidden",
      "shadowColor": "#000",
      "shadowOpacity": 0.26,
    }
  }
>
  <View
    style={
      Array [
        Object {
          "display": "flex",
          "flexDirection": "row",
          "marginBottom": 15,
          "marginLeft": 15,
          "marginRight": 15,
          "marginTop": 15,
        },
      ]
    }
  >
    <Text
      style={
        Object {
          "height": 120,
        }
      }
    />
    <View
      style={
        Array [
          Object {
            "flexBasis": 0,
            "flexDirection": "column",
            "flexGrow": 2,
            "flexShrink": 1,
          },
        ]
      }
    >
      <Text
        style={
          Array [
            Object {
              "flexBasis": 0,
              "flexGrow": 2,
              "flexShrink": 1,
              "fontSize": 20,
              "fontWeight": "700",
            },
          ]
        }
      >
        Sample title for post
      </Text>
      <Text
        style={
          Array [
            Object {
              "flexBasis": 0,
              "flexGrow": 1,
              "flexShrink": 1,
              "fontSize": 15,
              "fontWeight": "600",
            },
          ]
        }
      >
        sample description for post
      </Text>
      <View
        style={
          Array [
            Object {
              "alignItems": "flex-end",
              "flexBasis": 0,
              "flexDirection": "row",
              "flexGrow": 1,
              "flexShrink": 1,
            },
          ]
        }
      >
        <Text
          style={
            Array [
              Object {
                "color": "rgba(191, 191, 191, 1)",
                "fontSize": 12,
                "fontWeight": "600",
                "marginRight": 5,
              },
            ]
          }
        >
          2021-06-12 03:47:52
        </Text>
        <Text
          style={
            Array [
              Object {
                "color": "rgba(191, 191, 191, 1)",
                "fontSize": 12,
                "fontWeight": "600",
                "marginRight": 5,
              },
            ]
          }
        >
          Replies: 
          2
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`Post Should render post without image 1`] = `
<View
  accessible={true}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "backgroundColor": "#ffff",
      "borderRadius": 5,
      "elevation": 3,
      "marginBottom": 0,
      "marginLeft": 10,
      "marginRight": 10,
      "marginTop": 10,
      "opacity": 1,
      "overflow": "hidden",
      "shadowColor": "#000",
      "shadowOpacity": 0.26,
    }
  }
>
  <View
    style={
      Array [
        Object {
          "display": "flex",
          "flexDirection": "row",
          "marginBottom": 15,
          "marginLeft": 15,
          "marginRight": 15,
          "marginTop": 15,
        },
      ]
    }
  >
    <Text
      style={
        Object {
          "height": 120,
        }
      }
    />
    <View
      style={
        Array [
          Object {
            "flexBasis": 0,
            "flexDirection": "column",
            "flexGrow": 2,
            "flexShrink": 1,
          },
        ]
      }
    >
      <Text
        style={
          Array [
            Object {
              "flexBasis": 0,
              "flexGrow": 2,
              "flexShrink": 1,
              "fontSize": 20,
              "fontWeight": "700",
            },
          ]
        }
      >
        Sample title for post
      </Text>
      <Text
        style={
          Array [
            Object {
              "flexBasis": 0,
              "flexGrow": 1,
              "flexShrink": 1,
              "fontSize": 15,
              "fontWeight": "600",
            },
          ]
        }
      >
        sample description for post
      </Text>
      <View
        style={
          Array [
            Object {
              "alignItems": "flex-end",
              "flexBasis": 0,
              "flexDirection": "row",
              "flexGrow": 1,
              "flexShrink": 1,
            },
          ]
        }
      >
        <Text
          style={
            Array [
              Object {
                "color": "rgba(191, 191, 191, 1)",
                "fontSize": 12,
                "fontWeight": "600",
                "marginRight": 5,
              },
            ]
          }
        >
          2021-06-12 03:47:52
        </Text>
        <Text
          style={
            Array [
              Object {
                "color": "rgba(191, 191, 191, 1)",
                "fontSize": 12,
                "fontWeight": "600",
                "marginRight": 5,
              },
            ]
          }
        >
          Replies: 
          0
        </Text>
      </View>
    </View>
  </View>
</View>
`;
